# medtriage-env

./: Dockerfile  README.md  baseline_results.json  create_space.py  deploy.sh  inference.py  openenv.yaml  pyproject.toml  test_medtriage.py  upload_space.py
medtriage_env/: client.py  graders.py  models.py  openenv.yaml  scenarios.py
medtriage_env/server/: app.py  environment.py
server/: app.py  environment.py  requirements.txt
