[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medtriage-env"
version = "1.0.0"
description = "Emergency Department Triage Simulator — OpenEnv compatible RL environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["openenv", "reinforcement-learning", "healthcare", "triage", "rl-environment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",  # for FastAPI TestClient
]

[tool.setuptools.packages.find]
where = ["."]
include = ["medtriage_env*"]

[project.scripts]
server = "medtriage_env.server.app:main"
